--- a/package.json
+++ b/package.json
@@ -3,24 +3,33 @@
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.5",
     "@cypress/eslint-plugin-dev": "^5.1.0",
+    "@cypress/webpack-dev-server": "^1.4.0",
     "@cypress/webpack-preprocessor": "^5.9.0",
     "@types/cypress": "^1.1.3",
     "@types/node": "^15.12.2",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
+    "angular2-template-loader": "^0.6.2",
     "babel-loader": "^8.2.2",
+    "core-js": "^2.6.12",
     "cypress": "^7.5.0",
+    "cypress-localstorage-commands": "^1.4.5",
     "eslint": "^7.28.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-prettier": "^3.4.0",
+    "istanbul-instrumenter-loader": "^3.0.1",
     "prettier": "^2.3.1",
+    "raw-loader": "^4.0.2",
+    "source-map-loader": "^3.0.0",
+    "ts-loader": "^9.2.3",
     "typescript": "^4.3.3",
     "webpack": "^5.39.1"
   },
   "scripts": {
-    "lint": "eslint './Cypress/**/*.{js,ts,tsx}' --quiet --fix"
+    "lint": "eslint './Cypress/**/*.{js,ts,tsx}' --quiet --fix",
+    "cypress": "node_modules/.bin/cypress"
   },
   "name": "cypress-udemy",
   "version": "1.0.0",
